# backend_model_helia

./: .gitignore  README.md  main.py  pyproject.toml  settings.cfg  t.txt
catalog/: catalog1.json  catalog2.json  catalog3.json  catalog4.json  onduleur.json
model/: RL_model.py  RL_model2.py
training/: test.py  training_chauffage.py  training_off_grid.py  training_on_grid.py  training_pompage.py
