[project]
name = "backend-model"
version = "0.1.0"
description = "package containing the 5 models ."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "fastapi",
    "uvicorn (>=0.35.0,<0.36.0)",
    "openai (>=1.102.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
